style.css
* {
    margin: 0;
    padding: 0;
    box-sizing: border-box;
}
body {
    width: 100vw;
    height: 100vh;
    display: flex;
    justify-content: center;
    flex-direction: column;
    align-items: center;
}

#container {
    
    display: grid;
grid-template-columns: repeat(4, 1fr);
grid-template-rows: repeat(3, 1fr);
column-gap: 5px;
row-gap: 5px;
border: 5px solid blueviolet; 
padding: 1vh;
border-radius: 2vh;
transition-duration: 2s;

}
.block {
    width: 20vh;
    height: 20vh;
    position:relative;
    overflow: hidden;
    border-radius: 2vh;
    padding: 10px;

}
.block:hover {
    -webkit-box-shadow: 0px 0px 26px -5px rgba(138, 43, 226, 1);
    -moz-box-shadow: 0px 0px 26px -5px rgba(138, 43, 226, 1);
    box-shadow: 0px 0px 26px -5px rgba(138, 43, 226, 1);
}
.block > span {
    content:"" ;
    display: "block";
    background: blueviolet;
    width: 20vh;
    height: 20vh;
    top: 0;
    left: 0;
    position: absolute;
    overflow: hidden;
    transition-duration: 1s;
    transition-timing-function:ease-in-out;

}
button {
    margin: 5vh;
    padding: 2vh;
    border-radius: 2vh;
    border:5px solid blueviolet; 
    color: blueviolet;
    background-color: white;
}

